snapshots/syntax/library/statements/setattr/setattr_preserves_whitespace.snap
---
source: src/syntax/library/statements/filesystem/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetAttrStatement
      children:
        - kind: SetAttrKeyword
          text: SetAttr
        - kind: Whitespace
          text: "   "
        - kind: StringLiteral
          text: "\"File.txt\""
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "   "
        - kind: Identifier
          text: vbNormal
        - kind: Newline
          text: "\n"
