snapshots/syntax/library/statements/setattr/setattr_system.snap
---
source: src/syntax/library/statements/filesystem/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetAttrStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetAttrKeyword
                  text: SetAttr
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C:\\Windows\\system.dat\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: vbSystem
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
